// https://dbdiagram.io/d
// To-be schema — existing auth tables + game domain from reference models
// Generated from db/schema.sql + project/reference/*-model.md

// ─────────────────────────────────────────────
// Existing auth / platform tables
// ─────────────────────────────────────────────

Table roles {
  id bigserial [pk]
  name text [not null, unique]
  description text [not null, default: '']
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  handle text [not null, unique, note: 'lowercase, 3-32 chars, [a-z0-9_]']
  email text [not null, unique, note: 'lowercase, 3-320 chars']
  password_hash text [not null]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table jwt_signing_keys {
  id uuid [pk, default: `gen_random_uuid()`]
  token_type text [not null, note: 'access | refresh']
  algorithm text [not null, default: 'HS256']
  secret bytea [not null]
  state text [not null, default: 'active', note: 'active | retired | revoked']
  verify_until timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table user_roles {
  user_id uuid [not null]
  role_id bigint [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, role_id) [pk]
    role_id [name: 'user_roles_role_id_idx']
  }
}

Table invitations {
  id uuid [pk, default: `gen_random_uuid()`]
  email text [not null]
  code text [not null, unique]
  invited_by uuid [not null]
  used_by uuid
  used_at timestamptz
  expires_at timestamptz [not null]
  archived_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    code [name: 'invitations_code_idx']
    email [name: 'invitations_email_idx']
  }
}

Table password_reset_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  code text [not null, unique]
  expires_at timestamptz [not null]
  used_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    code [name: 'password_reset_tokens_code_idx']
    user_id [name: 'password_reset_tokens_user_id_idx']
  }
}

// ─────────────────────────────────────────────
// Game domain — game-model.md
// ─────────────────────────────────────────────

Table games {
  id bigserial [pk]
  name text [not null]
  status text [not null, default: 'setup', note: 'setup | active | completed']
  current_turn int [not null, default: 0]

  indexes {
    (id) [name: 'games_id_unique', unique]
  }
}

// ─────────────────────────────────────────────
// Empire domain — empire-model.md
// ─────────────────────────────────────────────

Table empires {
  id bigserial [pk]
  game_id bigint [not null]
  name text [not null]

  indexes {
    (game_id, id) [unique, name: 'empires_game_id_id_unique']
  }
}

Table players {
  id bigserial [pk]
  game_id bigint [not null]
  account_id uuid [not null, note: 'FK to users.id']
  is_gm boolean [not null, default: false]
  status text [not null, default: 'active', note: 'active | resigned | eliminated']

  indexes {
    (game_id, account_id) [unique, name: 'players_game_account_unique']
  }
}

Table agents {
  id bigserial [pk]
  name text [not null]
  version text [not null]

  Note: 'Global, not game-scoped. Immutable rows.'
}

Table empire_control {
  empire_id bigint [pk, note: 'One row per empire']
  player_id bigint [note: 'nullable']
  agent_id bigint [note: 'nullable']
  gm_set boolean [not null, default: false]

  indexes {
    player_id [unique, name: 'empire_control_player_unique', note: 'partial: WHERE player_id IS NOT NULL']
  }

  Note: 'CHECK: agent_id IS NULL => gm_set = false'
}

Table empire_system_names {
  empire_id bigint [not null]
  system_id bigint [not null]
  name text [not null]

  indexes {
    (empire_id, system_id) [pk]
  }
}

Table empire_jump_point_knowledge {
  game_id bigint [not null]
  empire_id bigint [not null]
  route_id bigint [not null]
  system_id bigint [not null]
  detected boolean [not null, default: false]
  range_band text [note: 'nullable']
  destination_known boolean [not null, default: false]

  indexes {
    (empire_id, route_id, system_id) [pk]
  }
}

// ─────────────────────────────────────────────
// World domain — world-model.md
// ─────────────────────────────────────────────

Table star_systems {
  id bigserial [pk]
  game_id bigint [not null]
  x int [not null]
  y int [not null]
  is_home_system boolean [not null, default: false]

  indexes {
    (game_id, id) [unique, name: 'star_systems_game_id_id_unique']
  }
}

Table jump_routes {
  id bigserial [pk]
  game_id bigint [not null]
  system_a_id bigint [not null, note: 'CHECK: system_a_id < system_b_id']
  system_b_id bigint [not null]
  cost int [not null, default: 50]
  last_turn_used int [note: 'nullable']

  indexes {
    (game_id, id) [unique, name: 'jump_routes_game_id_id_unique']
    (game_id, system_a_id, system_b_id) [unique, name: 'jump_routes_game_systems_unique']
  }
}

Table planets {
  id bigserial [pk]
  game_id bigint [not null]
  system_id bigint [not null]
  orbit int [not null]
  name text [not null, default: '']
  planet_type text [not null, default: 'rocky', note: 'rocky | gas_giant | asteroid_belt']
  is_home_world boolean [not null, default: false]
  lsn int [not null, note: '0..99']

  indexes {
    (game_id, id) [unique, name: 'planets_game_id_id_unique']
    (system_id, orbit) [unique, name: 'planets_system_orbit_unique']
  }
}

Table natural_resources {
  id bigserial [pk]
  game_id bigint [not null]
  planet_id bigint [not null]
  resource_type text [not null, note: 'ore | fuel | gold | materials | farmland']
  capacity int [not null]
  base_extraction int [not null]
  yield_percent int [not null, note: '1-100']
  reserves int [not null]
  is_infinite boolean [not null, default: false]

  indexes {
    (game_id, id) [unique, name: 'natural_resources_game_id_id_unique']
  }
}

// ─────────────────────────────────────────────
// Colonies & ships — world-model.md (empire-owned)
// ─────────────────────────────────────────────

Table colonies {
  id bigserial [pk]
  game_id bigint [not null]
  planet_id bigint [not null]
  empire_id bigint [not null]
  name text [not null, default: '']

  indexes {
    (game_id, id) [unique, name: 'colonies_game_id_id_unique']
    (empire_id, planet_id) [unique, name: 'colonies_empire_planet_unique']
  }
}

Table ships {
  id bigserial [pk]
  game_id bigint [not null]
  empire_id bigint [not null]
  colony_id bigint [note: 'nullable — docked']
  system_id bigint [note: 'nullable — in transit/orbit']
  ship_type text [not null, note: 'scout | transport']
  name text [not null, default: '']
  movement_points int [not null]

  indexes {
    (game_id, id) [unique, name: 'ships_game_id_id_unique']
  }

  Note: 'CHECK: exactly one of colony_id or system_id is NOT NULL'
}

// ─────────────────────────────────────────────
// Population — world-model.md
// ─────────────────────────────────────────────

Table population_groups {
  id bigserial [pk]
  colony_id bigint [note: 'nullable']
  ship_id bigint [note: 'nullable']
  group_type text [not null, note: 'untrained | worker | manager | soldier | pilot']
  count int [not null]

  Note: 'CHECK: exactly one of colony_id or ship_id is NOT NULL'
}

Table training_queue {
  id bigserial [pk]
  colony_id bigint [not null]
  from_group text [not null]
  to_group text [not null]
  count int [not null]
  start_turn int [not null]
  completion_turn int [not null]
}

// ─────────────────────────────────────────────
// Infrastructure — world-model.md
// ─────────────────────────────────────────────

Table mines {
  id bigserial [pk]
  colony_id bigint [not null]
  resource_id bigint [not null]
  staffed_workers int [not null, default: 0]

  Note: 'Resource must not be farmland'
}

Table farms {
  id bigserial [pk]
  colony_id bigint [not null]
  resource_id bigint [not null]
  staffed_workers int [not null, default: 0]

  Note: 'Resource must be farmland'
}

Table factories {
  id bigserial [pk]
  colony_id bigint [not null]
  staffed_workers int [not null, default: 0]
  assigned_managers int [not null, default: 0]
}

// ─────────────────────────────────────────────
// Inventory — world-model.md
// ─────────────────────────────────────────────

Table inventory {
  id bigserial [pk]
  colony_id bigint [note: 'nullable']
  ship_id bigint [note: 'nullable']
  resource_type text [not null, note: 'ore | fuel | food | materials | rstu']
  quantity int [not null, default: 0]

  Note: 'CHECK: exactly one of colony_id or ship_id is NOT NULL'
}

// ═════════════════════════════════════════════
// Relationships
// ═════════════════════════════════════════════

// --- Existing auth ---
Ref: user_roles.user_id > users.id [delete: cascade]
Ref: user_roles.role_id > roles.id [delete: cascade]
Ref: invitations.invited_by > users.id [delete: cascade]
Ref: invitations.used_by > users.id [delete: set null]
Ref: password_reset_tokens.user_id > users.id [delete: cascade]

// --- Game → children ---
Ref: empires.game_id > games.id
Ref: players.game_id > games.id
Ref: star_systems.game_id > games.id
Ref: jump_routes.game_id > games.id

// --- Players → accounts (users) ---
Ref: players.account_id > users.id

// --- Empire control bridge ---
Ref: empire_control.empire_id - empires.id
Ref: empire_control.player_id > players.id
Ref: empire_control.agent_id > agents.id

// --- Per-empire world views ---
Ref: empire_system_names.empire_id > empires.id
Ref: empire_system_names.system_id > star_systems.id
Ref: empire_jump_point_knowledge.game_id > games.id
Ref: empire_jump_point_knowledge.empire_id > empires.id
Ref: empire_jump_point_knowledge.route_id > jump_routes.id
Ref: empire_jump_point_knowledge.system_id > star_systems.id

// --- Galaxy structure ---
Ref: jump_routes.system_a_id > star_systems.id
Ref: jump_routes.system_b_id > star_systems.id
Ref: planets.system_id > star_systems.id
Ref: natural_resources.planet_id > planets.id

// --- Colonies & ships ---
Ref: colonies.planet_id > planets.id
Ref: colonies.empire_id > empires.id
Ref: ships.empire_id > empires.id
Ref: ships.colony_id > colonies.id
Ref: ships.system_id > star_systems.id

// --- Population ---
Ref: population_groups.colony_id > colonies.id
Ref: population_groups.ship_id > ships.id
Ref: training_queue.colony_id > colonies.id

// --- Infrastructure ---
Ref: mines.colony_id > colonies.id
Ref: mines.resource_id > natural_resources.id
Ref: farms.colony_id > colonies.id
Ref: farms.resource_id > natural_resources.id
Ref: factories.colony_id > colonies.id

// --- Inventory ---
Ref: inventory.colony_id > colonies.id
Ref: inventory.ship_id > ships.id
